WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300293
WebKit LLVM branch cannot build WebKit for iOS simulator
https://bugs.webkit.org/show_bug.cgi?id=300293
Summary
WebKit LLVM branch cannot build WebKit for iOS simulator
Ryosuke Niwa
Reported
2025-10-06 22:03:43 PDT
https://github.com/rniwa/llvm-project/tree/webkit
cannot build WebKit for iOS simulator due to various errors.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2025-10-06 22:08:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51917
EWS
Comment 2
2025-10-07 12:30:05 PDT
Committed
301156@main
(d4b79a9469fb): <
https://commits.webkit.org/301156@main
> Reviewed commits have been landed. Closing PR #51917 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-10-07 12:31:13 PDT
<
rdar://problem/162138162
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug