WebKit LLVM branch cannot build WebKit for iOS simulator https://bugs.webkit.org/show_bug.cgi?id=300293

Reviewed by David Kilzer and Mike Wyrzykowski.

Make WebKit compatible with webkit branch of LLVM.

* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::maxIndexValue): Ignore "-Wpsabi" warning.
* Source/WebKit/Configurations/BaseExtension.xcconfig:
Set CLANG_MODULE_CACHE_PATH to an empty string to avoid hitting
an error in pre-compiling WebKit2Prefix.h.

Canonical link: https://commits.webkit.org/301156@main