Source/WebGPU/WebGPU/Queue.mm
@@ -505,12 +505,17 @@ static std::pair<uint32_t, uint16_t> maxIndexValue(std::span<uint8_t> data)
     std::span<simd::ushort32> dataUshort = unsafeMakeSpan(static_cast<simd::ushort32*>(static_cast<void*>(data.data())), lengthUint32);
     simd::uint16 maxValue = dataUint.front();
     simd::ushort32 maxUshort = dataUshort.front();
+
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wpsabi"
     for (auto dataUintV : dataUint)
         maxValue = simd_max(maxValue, dataUintV);
     for (auto dataUshortV : dataUshort)
         maxUshort = simd_max(maxUshort, dataUshortV);
 
     auto result = std::make_pair(simd_reduce_max(maxValue), simd_reduce_max(maxUshort));
+#pragma clang diagnostic pop
+
     if (divResult.rem) {
         auto slowResult = maxIndexValueSlow(data.subspan(blockSize * divResult.quot));
         result.first = std::max(result.first, slowResult.first);
